# c2hi

./: CMakeLists.txt  LICENSE  README.md  c2hi_env.yml  package.xml
c2hi/: datatypes.py  utils.py
config/: experiment_tracker.yaml
config/exp1_scene_cfgs/: default_exp_params.yaml  rn50_basic.yaml  rn50_detailed.yaml  vitb32_basic.yaml  vitb32_detailed.yaml  vitl14_basic.yaml  vitl14_detailed.yaml
config/exp2_role_cfgs/: best_campus_vis_role_ar_cmd.yaml  best_courtyard_vis_role_ar_cmd.yaml  best_lab_vis_role_ar_cmd.yaml  best_lobby_vis_role_ar_cmd.yaml  best_overall_vis_role_ar_cmd.yaml  default_role_exp_params.yaml
config/exp3_cmd_cfgs/: ar_cmd_exp_params.yaml  ar_role_ar_cmd.yaml  ar_role_gesture_r80_w16_cmd.yaml  ar_role_gesture_r80_w24_cmd.yaml  ar_role_gesture_r80_w8_cmd.yaml  ar_role_verbal_music_best_campus_cmd.yaml  ar_role_verbal_music_best_courtyard_cmd.yaml  ar_role_verbal_music_best_lab_cmd.yaml  ar_role_verbal_music_best_lobby_cmd.yaml  ar_role_verbal_music_best_overall_cmd.yaml  ar_role_verbal_srp_best_campus_cmd.yaml  ar_role_verbal_srp_best_courtyard_cmd.yaml  ar_role_verbal_srp_best_lab_cmd.yaml  ar_role_verbal_srp_best_lobby_cmd.yaml  ar_role_verbal_srp_best_overall_cmd.yaml  (+8 more)
docs/: EXPERIMENTS.md  INSTALL.md
launch/: exp0a_scene_rec_nodes.launch.py  exp1_record_scene_results.launch.py  exp2_record_role_results.launch.py  exp3a_record_ar_cmd_results.launch.py  exp3b_record_verbal_cmd_results.launch.py  exp3c_record_gesture_cmd_results.launch.py
scripts/: download_dataset.py  gesture_rec_server.py  semantic_fusion_node.py
(+146 files in other folders)
